Cambios en front

--- a/Neo4Secure/Neo4Secure/src/app/neosec/panel/panel.component.html
+++ b/Neo4Secure/Neo4Secure/src/app/neosec/panel/panel.component.html
@@ -1,5 +1,5 @@
 <div class="layout-wrapper">
-  <app-navbar></app-navbar>
+  <app-navbar-user></app-navbar-user>
 
   <!-- Contenedor principal para el contenido -->
   <div class="layout-content">
